# OpenFoundry

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT-RESPONSE-AND-FLOW-ENGINE-DESIGN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HTTP-ROUTE-AUDIT.md  INVENTORY-identity-federation-service.md  MIGRATION-LOOP-STATUS.md  Makefile  NIGHTLY-SUMMARY.md  ONTOLOGY-KERNEL-MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  STUB-AUDIT.md  TASKS_ML_FOUNDRY_MODELS.md  buf.gen.yaml  checklist.md  compose.yaml  go.mod  go.sum  guia-migracion-services-a-microservicios.md  justfile  microservicios-derivados-desde-foundry-docs.md  package.json  pnpm-lock.yaml  prompts-migracion-hasta-85-microservicios.md
libs/analytical-logic/: Cargo.toml  doc.go  model.go
libs/analytical-logic/migrations/: 0001_analytical_expressions_foundation.sql
libs/analytical-logic/src/: lib.rs  model.rs  repo.rs
libs/audit-trail/: Cargo.toml  audit_test.go  categories.go  event.go
libs/audit-trail/src/: events.rs  lib.rs  middleware.rs
libs/auth-middleware/: Cargo.toml  ascii.go  claims.go  claims_builder.go  claims_test.go  doc.go  jwt.go  jwt_rotating.go  jwt_test.go  layer.go  layer_test.go  markings.go  markings_test.go  metrics.go  middleware.go  middleware_test.go  options.go  purpose_checkpoint.go  purpose_checkpoint_test.go  secret_loader.go  secret_loader_test.go  tenant.go  tenant_test.go
libs/auth-middleware/src/: jwt.rs  lib.rs  markings.rs
libs/authz-cedar/: Cargo.toml  cedar_schema.cedarschema
libs/authz-cedar/src/: audit.rs  audit_kafka.rs  axum.rs  engine.rs  iceberg_policies.rs  lib.rs  nats.rs  pg.rs  schedule_policies.rs
libs/authz-cedar/tests/: kafka_sink.rs  policies.rs
libs/cassandra-kernel/: Cargo.toml  README.md  action_log_store_test.go  cluster.go  doc.go  link_store.go  link_store_test.go  object_store.go  object_store_test.go  ontology_migrations.go  osv2_codec.go  schema_store.go  session_store_test.go
libs/cassandra-kernel/src/: error.rs  lib.rs  migrate.rs  query.rs  repos.rs  session.rs  shared.rs
libs/cassandra-kernel/tests/: cassandra_action_log_store_it.rs  cassandra_link_store_it.rs  cassandra_object_store_it.rs  cassandra_schema_session_store_it.rs  integration.rs
libs/core-models/: Cargo.toml  doc.go
libs/core-models/dataset/: schema.go  transaction.go
libs/core-models/errs/: errors.go
libs/core-models/health/: health.go
libs/core-models/ids/: typed_id.go
libs/core-models/resource/: registry.go  registry_test.go
libs/core-models/rid/: rid.go  rid_test.go
libs/core-models/security/: marking_test.go
libs/core-models/src/: lib.rs  media_reference.rs
libs/db-pool/: Cargo.toml  dbpool.go
libs/db-pool/src/: lib.rs
libs/event-bus/: Cargo.toml
libs/event-bus-control/: Cargo.toml  connectors_test.go  contracts.go  doc.go  topics.go  workflows.go
libs/event-bus-control/src/: connectors.rs  contracts.rs  kafka_live.rs  lib.rs  publisher.rs  schema_registry.rs  schemas.rs  subscriber.rs
libs/event-bus-data/: Cargo.toml  subscriber.go
libs/event-bus-data/src/: config.rs  headers.rs  lib.rs  publisher.rs  subscriber.rs  testkit.rs
libs/event-bus-data/tests/: kafka_roundtrip.rs
libs/event-bus/src/: connectors.rs  contracts.rs  lib.rs  topics.rs  workflows.rs
libs/event-scheduler/: Cargo.toml  README.md  errors.go  scheduler.go
libs/event-scheduler/src/: lib.rs
libs/event-scheduler/tests/: scheduler_test.rs
libs/geospatial-core/: Cargo.toml  doc.go
libs/geospatial-tiles/: Cargo.toml  tiles_test.go
libs/geospatial-tiles/src/: lib.rs
libs/idempotency/: Cargo.toml  README.md  cassandra_test.go  idempotency.go  idempotency_test.go
libs/idempotency/migrations/: 0001_processed_events.cql  0001_processed_events.sql
libs/idempotency/src/: cassandra.rs  lib.rs  postgres.rs
libs/idempotency/tests/: cassandra_it.rs  postgres_it.rs
libs/media-scanner/: Cargo.toml
libs/media-scanner/src/: lib.rs
libs/observability/: Cargo.toml  metrics.go  tracing.go
libs/observability/costmodel/: costmodel.go  costmodel_test.go
libs/observability/src/: cost_model.rs  lib.rs
libs/ontology-kernel/: CLAUDE.md  Cargo.toml  python_runtime.go
libs/ontology-kernel/config/: config_test.go
libs/ontology-kernel/domain/: access.go  access_test.go  action_write_transaction.go  action_write_transaction_test.go  binding_repository.go  doc.go  function_metrics.go  funnel_repository.go  funnel_repository_sources.go  graph.go  iter7c1_test.go  link_type_repository.go  media_reference_validator.go  object_sets.go  objects_types.go  python_sidecar_integration_test.go  repositories_iter7b3_test.go  rules_test.go  submission_eval.go  type_system.go  type_system_test.go
libs/ontology-kernel/metrics/: metrics_test.go
libs/ontology-kernel/models/: action_type.go  doc.go  function_authoring.go  function_package.go  interface.go  iter2_test.go  link_type.go  object_set.go  object_type.go  object_view.go  property.go  property_metadata.go  property_metadata_test.go  quiver.go  shared_property.go  submission_criteria.go
libs/outbox/: Cargo.toml  README.md  lineage_event_test.go  outbox_test.go
libs/pipeline-expression/: Cargo.toml  infer.go  types.go
libs/plugin-sdk/: Cargo.toml
libs/query-engine/: Cargo.toml  README.md  context.go  datasource.go  doc.go  udf.go
libs/saga/: Cargo.toml  README.md
libs/scheduling-cron/: Cargo.toml  doc.go
libs/scheduling-linter/: Cargo.toml  doc.go
libs/search-abstraction/: Cargo.toml  README.md
libs/state-machine/: Cargo.toml  README.md  state_machine.go  state_machine_test.go
libs/storage-abstraction/: Cargo.toml  README.md  backing_fs_test.go  definitions.go  definitions_test.go  osv2_advanced.go  osv2_advanced_test.go  osv2_snapshots.go  osv2_snapshots_test.go  repositories.go  search.go  search_osv2_test.go
libs/temporal-client/: Cargo.toml
python/: pyproject.toml
python/openfoundry_pyruntime/: __init__.py  bootstrap.py  executors.py  server.py  sessions.py
python/openfoundry_pyruntime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+6694 files in other folders)
