[workspace]
resolver = "2"
members = [
    # ── Shared Libraries ──
    "libs/core-models",
    "libs/auth-middleware",
    "libs/event-bus",
    "libs/plugin-sdk",
    "libs/storage-abstraction",
    "libs/query-engine",
    "libs/vector-store",
    "libs/geospatial-core",
    "libs/audit-trail",
    "libs/testing",

    # ── Developer Tooling ──
    "tools/of-cli",

    # ── Services ──
    "services/edge-gateway-service",
    "services/gateway",
    "services/identity-federation-service",
    "services/auth-service",
    "services/session-governance-service",
    "services/authorization-policy-service",
    "services/security-governance-service",
    "services/tenancy-organizations-service",
    "services/oauth-integration-service",
    "services/audit-compliance-service",
    "services/checkpoints-purpose-service",
    "services/network-boundary-service",
    "services/federation-product-exchange-service",
    "services/retention-policy-service",
    "services/lineage-deletion-service",
    "services/audit-service",
    "services/sds-service",
    "services/data-connector",
    "services/cipher-service",
    "services/dataset-service",
    "services/dataset-versioning-service",
    "services/data-asset-catalog-service",
    "services/dataset-quality-service",
    "services/event-streaming-service",
    "services/cdc-metadata-service",
    "services/sql-warehousing-service",
    "services/time-series-data-service",
    "services/query-service",
    "services/connector-management-service",
    "services/virtual-table-service",
    "services/ingestion-replication-service",
    "services/pipeline-service",
    "services/pipeline-authoring-service",
    "services/pipeline-build-service",
    "services/pipeline-schedule-service",
    "services/lineage-service",
    "services/ontology-service",
    "services/ontology-definition-service",
    "services/object-database-service",
    "services/ontology-query-service",
    "services/ontology-actions-service",
    "services/ontology-funnel-service",
    "services/ontology-functions-service",
    "services/ontology-security-service",
    "services/entity-resolution-service",
    "services/ml-service",
    "services/model-catalog-service",
    "services/ml-experiments-service",
    "services/model-deployment-service",
    "services/model-evaluation-service",
    "services/model-serving-service",
    "services/model-inference-history-service",
    "services/ai-service",
    "services/llm-catalog-service",
    "services/prompt-workflow-service",
    "services/knowledge-index-service",
    "services/retrieval-context-service",
    "services/conversation-state-service",
    "services/tool-registry-service",
    "services/ai-evaluation-service",
    "services/workflow-service",
    "services/approvals-service",
    "services/notebook-service",
    "services/document-reporting-service",
    "services/app-builder-service",
    "services/application-curation-service",
    "services/widget-registry-service",
    "services/report-service",
    "services/global-branch-service",
    "services/marketplace-service",
    "services/marketplace-catalog-service",
    "services/product-distribution-service",
    "services/nexus-service",
    "services/geospatial-intelligence-service",
    "services/notification-alerting-service",
    "services/notification-service",
    "services/model-adapter-service",
    "services/model-lifecycle-service",
    "services/agent-runtime-service",
    "services/document-intelligence-service",
    "services/ai-application-generation-service",
    "services/tabular-analysis-service",
    "services/ontology-exploratory-analysis-service",
    "services/ontology-timeseries-analytics-service",
    "services/sql-bi-gateway-service",
    "services/notebook-runtime-service",
    "services/spreadsheet-computation-service",
    "services/analytical-logic-service",
    "services/workflow-automation-service",
    "services/automation-operations-service",
    "services/workflow-trace-service",
    "services/application-composition-service",
    "services/scenario-simulation-service",
    "services/solution-design-service",
    "services/developer-console-service",
    "services/sdk-generation-service",
    "services/managed-workspace-service",
    "services/custom-endpoints-service",
    "services/mcp-orchestration-service",
    "services/compute-modules-control-plane-service",
    "services/compute-modules-runtime-service",
    "services/monitoring-rules-service",
    "services/health-check-service",
    "services/execution-observability-service",
    "services/telemetry-governance-service",
    "services/code-security-scanning-service",
    "services/code-repository-review-service",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/open-foundry/open-foundry"

[workspace.dependencies]
# ── Async Runtime ──
tokio = { version = "1", features = ["full"] }

# ── Web / HTTP ──
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1" }

# ── gRPC / Protobuf ──
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# ── Database ──
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ── Observability ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# ── Error Handling ──
anyhow = "1"
thiserror = "2"

# ── Identity & Crypto ──
uuid = { version = "1", features = ["v7", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"

# ── Time ──
chrono = { version = "0.4", features = ["serde"] }

# ── Config ──
config = "0.14"

# ── Messaging ──
async-nats = "0.38"

# ── Object Storage ──
object_store = { version = "0.11", features = ["aws"] }

# ── Query Engine ──
datafusion = "44"

# ── Python Integration ──
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# ── Search ──
meilisearch-sdk = "0.27"

# ── Redis ──
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# ── Utilities ──
bytes = "1"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
base64 = "0.22"
url = { version = "2", features = ["serde"] }
regex = "1"
semver = "1"

# ── Testing ──
testcontainers = "0.23"
wiremock = "0.6"

# ── Internal Crates ──
core-models = { path = "libs/core-models" }
auth-middleware = { path = "libs/auth-middleware" }
event-bus = { path = "libs/event-bus" }
storage-abstraction = { path = "libs/storage-abstraction" }
query-engine = { path = "libs/query-engine" }
vector-store = { path = "libs/vector-store" }
geospatial-core = { path = "libs/geospatial-core" }
audit-trail = { path = "libs/audit-trail" }
testing = { path = "libs/testing" }
plugin-sdk = { path = "libs/plugin-sdk" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
