[package]
name = "audit-trail"
description = "Shared audit event emitter and Axum auto-audit middleware"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.core-models]
workspace = true

[dependencies.event-bus-control]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.uuid]
workspace = true

[lib]
path = "src/lib.rs"
name = "audit_trail"
required-features = []
crate-type = ["lib"]
