[package]
name = "audit-trail"
description = "Shared audit event emitter and Axum auto-audit middleware"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.core-models]
workspace = true

[dependencies.event-bus-control]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.outbox]
workspace = true
optional = true

[dependencies.sqlx]
workspace = true
optional = true

[features]
# Enables the Postgres-backed publisher (`events::publisher`). Off by
# default so the crate stays usable from non-Postgres call sites
# (gRPC code-gen, tracing-only services, the front-end TS bridge).
outbox = ["dep:outbox", "dep:sqlx"]

[lib]
path = "src/lib.rs"
name = "audit_trail"
required-features = []
crate-type = ["lib"]
