[package]
name = "auth-middleware"
description = "JWT validation, claims extraction, and RBAC middleware for Axum/Tonic"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.core-models]
workspace = true

[dependencies.jsonwebtoken]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.uuid]
workspace = true

[lib]
path = "src/lib.rs"
name = "auth_middleware"
required-features = []
crate-type = ["lib"]
