[package]
name = "core-models"
description = "Shared domain models, typed IDs, pagination, and error types"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.uuid]
workspace = true

[lib]
path = "src/lib.rs"
name = "core_models"
required-features = []
crate-type = ["lib"]
