[package]
name = "event-scheduler"
description = "Cron-driven Kafka event emitter — reads schedules.definitions and publishes time-based triggers (Foundry Schedule pattern, Tarea 1.3)"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[features]
default = []
# `it` enables the Postgres + Kafka testcontainer integration test.
# Off by default so `cargo test -p event-scheduler` stays a no-IO unit run.
it = ["dep:testcontainers", "event-bus-data/it"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
event-bus-data = { workspace = true }
scheduling-cron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lib]
path = "src/lib.rs"
name = "event_scheduler"
crate-type = ["lib"]

[[bin]]
name = "schedules-tick"
path = "src/bin/schedules-tick.rs"
