[package]
name = "geospatial-core"
description = "Geospatial primitives, H3 indexing, WKT parsing, and MVT tile encoding"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[lib]
path = "src/lib.rs"
name = "geospatial_core"
required-features = []
crate-type = ["lib"]
