[package]
name = "observability"
description = "Shared observability building blocks: cost model for the Foundry compute-seconds meter, plus the metric registration helpers neighbouring services use to publish into the platform Prometheus scrape."

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.serde]
workspace = true

[lib]
path = "src/lib.rs"
name = "observability"
required-features = []
crate-type = ["lib"]
