[package]
name = "ontology-kernel"
description = "Shared ontology domain, models and HTTP handlers reused by ontology-* services"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies.auth-middleware]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.config]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.pyo3]
workspace = true
features = ["abi3-py311"]

[dependencies.reqwest]
workspace = true

[dependencies.semver]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.uuid]
workspace = true
